# curso-fastapi-2025-live-python

./: .gitignore  README.md
fastapi_zero/: pyproject.toml
fastapi_zero/fastapi_zero/: app.py  security.py
fastapi_zero/fastapi_zero/routers/: auth.py  users.py
fastapi_zero/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
